--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -58,7 +58,26 @@
                 <!-- /.portfolio-wrapper -->
             </div>		
             <!-- /.portfolio -->
-
+            
+            <!-- .portfolio -->
+            <div class="portfolio catML" data-cat="catML">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-2" target="_blank">
+                        <img src="images/portfolio/Caption.jpg" alt="Object Detection" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Object Detection</a>
+                                <span class="text-category">Implemented Fast-RCNN and non max suprression.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
             <!-- .portfolio -->
             <div class="portfolio catDM" data-cat="catDM">	
                 <!-- .portfolio-wrapper -->
