--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,5 +60,10 @@
             }       
 
         </style>
+        
+        <!-- Mathjax Support -->
+        <script type="text/javascript" async
+            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+        </script>
 
     </head>
