--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,8 +62,8 @@
         </style>
         
         <!-- Mathjax Support -->
-        <script type="text/javascript" async
-            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+        <script type="text/javascript" id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
         </script>
 
     </head>
