--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,4 +60,13 @@
             }       
 
         </style>
+        
+          <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+      }
+    });
+  </script>
     </head>
