--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,4 +69,5 @@
       }
     });
   </script>
+        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
     </head>
