--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1372,13 +1372,19 @@ ul.about {
 }
 
 .postPage ul{
-    list-style-type: circle;
     margin-left:10px;
 }
 
+.postPage ul > li{
+    list-style-type: circle;
+}
+
 .postPage ol{
-    list-style-type: decimal;
     margin-left:10px;
+}
+
+.postPage ol > li{
+    list-style-type: decimal;
 }
 
 
