--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -79,8 +79,10 @@
                                 <div class="text_content">{{ post.title }}</div>
                                 <div class="clear"></div>
                             </div>
-
-                            {{ post.content }}
+                            
+                            <div class="main_content">
+                                {{ post.content }}
+                            </div>
                             
                             <div class="col-md-12 first">
                                 <div class="info">
