--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1371,14 +1371,14 @@ ul.about {
     padding-top:0;
 }
 
-.postPage ul{
+.postPage .main_content ul{
     list-style-type: circle;
-    margin-left:20px;
+    margin-left:30px;
 }
 
-.postPage ol{
+.postPage .main_content ol{
     list-style-type: decimal;
-    margin-left:20px;
+    margin-left:30px;
 }
 
 
