--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1371,12 +1371,12 @@ ul.about {
     padding-top:0;
 }
 
-.postPage .main_content ul{
+.main_content ul{
     margin-left:30px;
     list-style-type: disc;
 }
 
-.postPage .main_content ol{
+.main_content ol{
     margin-left:30px;
     list-style-type: decimal;
 }
