--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1373,12 +1373,12 @@ ul.about {
 
 .main_content ul{
     margin-left:30px;
-    list-style-type: disc;
+    list-style: disc;
 }
 
 .main_content ol{
     margin-left:30px;
-    list-style-type: decimal;
+    list-style: decimal;
 }
 
 .blog-article .post_media_detail{
