--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1371,12 +1371,12 @@ ul.about {
     padding-top:0;
 }
 
-.main_content ul{
+.main_content ul > li{
     margin-left:30px;
     list-style: disc;
 }
 
-.main_content ol{
+.main_content ol > li{
     margin-left:30px;
     list-style: decimal;
 }
