--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1372,13 +1372,17 @@ ul.about {
 }
 
 .main_content ul > li{
-    margin-left:30px;
+    margin-left: 30px;
     list-style: disc;
 }
 
 .main_content ol > li{
-    margin-left:30px;
+    margin-left: 30px;
     list-style: decimal;
+}
+
+.main_content ul, ol{
+    padding-left: 0px;
 }
 
 .blog-article .post_media_detail{
