--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -39,7 +39,26 @@
                 <!-- /.portfolio-wrapper -->
             </div>		
             <!-- /.portfolio -->
-
+            
+            <!-- .portfolio -->
+            <div class="portfolio catML" data-cat="catML">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="https://github.com/wuhoward/ML_Final" target="_blank">
+                        <img src="images/portfolio/FakeReview.jpg" alt="Fake Review Detection" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Fake Review Detection</a>
+                                <span class="text-category">Improved results by training the imbalanced Yelp Dataset with XGBoost.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
             <!-- .portfolio -->
             <div class="portfolio catML" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
@@ -60,22 +79,22 @@
             <!-- /.portfolio -->
             
             <!-- .portfolio -->
-            <div class="portfolio catML" data-cat="catML">	
+            <div class="portfolio catCA" data-cat="catCA">
                 <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-2" target="_blank">
-                        <img src="images/portfolio/Caption.jpg" alt="Object Detection" />
+                <div class="portfolio-wrapper">			
+                    <a href="https://github.com/wuhoward/VLSI_Design_Final"  target="_blank">
+                        <img src="images/portfolio/APR.jpg" alt="SAO Filter Accelerator" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Object Detection</a>
-                                <span class="text-category">Implemented Fast-RCNN and non max suprression.</span>
+                                <a class="text-title">SAO Filter Accelerator</a>
+                                <span class="text-category">Completed RTL, pre-layout and post-layout simulations.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
                     </a>
                 </div>
                 <!-- /.portfolio-wrapper -->
-            </div>		
+            </div>				
             <!-- /.portfolio -->
             
             <!-- .portfolio -->
@@ -101,25 +120,6 @@
             <div class="portfolio catCA" data-cat="catCA">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
-                    <a href="https://github.com/wuhoward/VLSI_Design_Final"  target="_blank">
-                        <img src="images/portfolio/APR.jpg" alt="SAO Filter Accelerator" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">SAO Filter Accelerator</a>
-                                <span class="text-category">Completed RTL, pre-layout and post-layout simulations.</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>				
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catCA" data-cat="catCA">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">			
                     <a href="https://github.com/wuhoward/MC-Projects" target="_blank">
                         <img src="images/portfolio/RocketChip.jpg" alt="Mandelbrot Set on Rocket Chip" />
                         <div class="label">
@@ -134,7 +134,25 @@
                 <!-- /.portfolio-wrapper -->
             </div>	
             <!-- /.portfolio -->
-
+            
+            <!-- .portfolio -->
+            <div class="portfolio catML" data-cat="catML">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-2" target="_blank">
+                        <img src="images/portfolio/Caption.jpg" alt="Object Detection" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Object Detection</a>
+                                <span class="text-category">Implemented Fast-RCNN and non max suprression.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
             <div class="clear"></div>
 
         </div>
