--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -102,11 +102,30 @@
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-3" target="_blank">
-                        <img src="images/portfolio/Taylor.png" alt="Image Caption" />
+                        <img src="images/portfolio/Taylor.png" alt="Image Captioning" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Image Caption</a>
+                                <a class="text-title">Image Captioning</a>
                                 <span class="text-category">Used LSTM + Attention to generate text descriptions for images.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
+             !-- .portfolio -->
+            <div class="portfolio catML" data-cat="catML">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="https://github.com/wuhoward/CCM_Final" target="_blank">
+                        <img src="images/portfolio/TargetMap.png" alt="Incorporating Prior to RL Agents" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Incorporating Prior to RL Agents</a>
+                                <span class="text-category">Played the Monster Kong game with A3C-ICM.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -144,7 +163,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Object Detection</a>
-                                <span class="text-category">Implemented Fast-RCNN and non max suprression.</span>
+                                <span class="text-category">Implemented Fast-RCNN and non max suppression.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
