--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -116,7 +116,7 @@
             </div>		
             <!-- /.portfolio -->
             
-             !-- .portfolio -->
+            <!-- .portfolio -->
             <div class="portfolio catML" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
