--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -30,7 +30,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Text to Image Synthesis</a>
-                                <span class="text-category">Generate realistic flower images according to the given descriptions.</span>
+                                <span class="text-category">Generated realistic flower images according to the given descriptions.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -117,6 +117,25 @@
             <!-- /.portfolio -->
             
             <!-- .portfolio -->
+            <div class="portfolio catCA" data-cat="catCA">
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">			
+                    <a href="https://github.com/wuhoward/PP-HWs/tree/master/HW4_105062635" target="_blank">
+                        <img src="images/portfolio/BlockedFW.png" alt="Blocked Floyd-Warshall Algorithm" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Blocked Floyd-Warshall Algorithm</a>
+                                <span class="text-category">Achieved 20x speedup with an implementation of CUDA+MPI on multiple GPUs.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>	
+            <!-- /.portfolio -->
+            
+            <!-- .portfolio -->
             <div class="portfolio catML" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
@@ -125,7 +144,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Incorporating Prior to RL Agents</a>
-                                <span class="text-category">Played the Monster Kong game with A3C-ICM.</span>
+                                <span class="text-category">Designed curricula for A3C-ICM on the Monster Kong game.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -163,7 +182,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Object Detection</a>
-                                <span class="text-category">Implemented Fast-RCNN and non max suppression.</span>
+                                <span class="text-category">Implemented Fast-RCNN and non max suppression algorithm.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
