--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -49,7 +49,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">SAO Filter Accelerator</a>
-                                <span class="text-category">Completed RTL, pre-layout and post-layout simulations.</span>
+                                <span class="text-category">Completed IC design flow form RTL, pre-layout to post-layout simulations.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -124,8 +124,8 @@
                         <img src="images/portfolio/BlockedFW.png" alt="Blocked Floyd-Warshall Algorithm" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Blocked Floyd-Warshall Algorithm</a>
-                                <span class="text-category">Achieved 20x speedup with an implementation of CUDA+MPI on multiple GPUs.</span>
+                                <a class="text-title">Blocked Floyd-Warshall</a>
+                                <span class="text-category">Achieved 20x speedup with CUDA + MPI on multiple GPUs.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
