--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
-        <meta name="description" content="FlexyCodes - FlexyCard vCard Template. Creating my personal page!"/>
+        <meta name="description" content="The personal website of Hao-Ning (Howard) Wu!"/>
 
         <!-- CSS | bootstrap -->
         <!-- Credits: http://getbootstrap.com/ -->
