--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1250,6 +1250,15 @@ ul.about {
     list-style: none;
     margin-top: 20px;
 }
+
+#resume .col-md-8 span.duration {
+    float: right;
+}
+#resume .col-md-8 ul li {
+    list-style: none;
+    margin-top: 20px;
+}
+
 #resume .resume-left ul li h5 {
     padding-bottom: 10px;
 }
