Add PicCollage Exp

--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -255,6 +255,11 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
+                <h5>Machine Learning Intern <span class="duration"><i class="fa fa-calendar color"></i> July 2020 - Sept. 2020</span></h5>
+                <h6><span class="fa fa-briefcase"></span> PicCollage </h6>
+                <p>Created an end-to-end image retrieval system for 20K in-app stickers using unsupervised learning.</p>
+            </li>
+            <li>
                 <h5>Research Assistant <span class="duration"><i class="fa fa-calendar color"></i> Jan. 2019 - June. 2019</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
                 <p>Created a tool for Network Architecture Search (NAS) which can transform layers of pre-trained CNNs based on user-specified arguments. Enabled CNN model pruning with various importance metrics.</p>
@@ -294,7 +299,7 @@
             <li class="first">
                 <h5>M.S. in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
                 <h6><span class="fa fa-book"></span> New York University (Courant Institute)</h6>
-                <p>Machine Learning, Computational Cognitive Modeling, Big Data, Honors Algorithms, Programming Languages, Operating Systems</p>
+                <p>Machine Learning, Computer Vision, Deep Learning Systems, Computational Cognitive Modeling, Big Data, Honors Algorithms, Programming Languages, Operating Systems</p>
             </li>
             <li>
                 <h5>M.S. in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
