--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -31,7 +31,7 @@
                                         <div class="top_c ">
 
                                             <div class="title_content">
-                                                <div class="text_content"><a href="#post-{{ post.id | remove: "/" }}" class="read_more">{{ post.title }}</a></div>
+                                                <div class="text_content"><a href="{{ post.url }}" target="_blank "class="read_more">{{ post.title }}</a></div>
                                                 <div class="clear"></div>
                                             </div>
                                             
