--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -46,7 +46,7 @@
                                         </div>
                                     </div>	
 
-                                    <a href="{{ post.note_link }}" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
+                                    <a href="{{ post.note_link }}" target="_blank" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
 
                                 </div>
                             </div>
