--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -255,6 +255,11 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
+                <h5>Software Engineer Intern<span class="duration"><i class="fa fa-calendar color"></i> Feb. 2021 - May 2021</span></h5>
+                <h6><span class="fa fa-briefcase"></span> TuSimple </h6>
+                <p>Design and develop new GPU operators for ML Algorithms.</p>
+            </li>
+            <li>
                 <h5>Machine Learning Intern <span class="duration"><i class="fa fa-calendar color"></i> July 2020 - Sept. 2020</span></h5>
                 <h6><span class="fa fa-briefcase"></span> PicCollage </h6>
                 <p>Created an end-to-end image retrieval system for 20K in-app stickers using unsupervised learning.</p>
